# blux-commander

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL  NOTICE  README.md  mkdocs.yml  pyproject.toml  snapshot.md
.github/workflows/: ci.yml  docs.yml  physics.yml  release.yml
blux_commander/: __init__.py  cli.py
blux_commander/core/: api.py  commander.py  config.py  plugins.py  shell.py  telemetry.py  terminal.py  tui.py
blux_commander/integrations/: ca.py  doctrine.py  guard.py  lite.py  quantum.py  reg.py
blux_commander/ui/panels/: ai_panel.py  logs_panel.py  plugins_panel.py  telemetry_panel.py  terminal_panel.py
blux_commander/ui/themes/: default.tcss  highcontrast.tcss
blux_commander/web/: auth.py  commands.py  insights.py  server.py  storage.py
blux_commander/web/static/: app.js
blux_commander/web/static/assets/: style.css
blux_commander/web/templates/: index.html
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  INTEGRATIONS.md  OPERATIONS.md  ROADMAP.md  ROLE.md  SECURITY.md  THEMES.md  TROUBLESHOOTING.md  index.md
scripts/: gen_filetree.py  physics_tests.sh  run_tui_demo.py  update_readme_filetree.py
tests/: test_cli.py  test_plugins.py  test_shell.py  test_terminal.py  test_tui.py  test_web_dashboard.py
